--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -23,14 +23,14 @@
     <div class="container cont-header">
       <nav class="main-nav">
         <a href="./index.html" class="link-webstudio link">Web<span class="logo-studio">Studio</span> </a>
-  
+
         <ul class="site-nav list">
           <li><a href="./index.html" class="nav-header link">Studio</a></li>
           <li><a href="./portfolio.html" class="nav-header link">Portfolio</a></li>
           <li><a href="" class="nav-header link">Contacts</a></li>
         </ul>
       </nav>
-  
+
       <address class="address-hed">
         <ul class="auth-nav list">
           <li><a class="auth-nav-list link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
@@ -42,17 +42,17 @@
 
   <main>
     <section class="cont-section">
-      <div class="container"> 
-      <h1 class="hidden-title" hidden>Hello</h1>
+      <div class="container">
+        <h1 class="hidden-title" hidden>Hello</h1>
 
-      <ul class="nav-port list">
-        <li><button type="button" class="nav-button">All</button></li>
-        <li><button type="button" class="nav-button">Web Site</button></li>
-        <li><button type="button" class="nav-button">App</button></li>
-        <li><button type="button" class="nav-button">Design</button></li>
-        <li><button type="button" class="nav-button">Marketing</button></li>
-      </ul>
-      
+        <ul class="nav-port list">
+          <li><button type="button" class="nav-button">All</button></li>
+          <li><button type="button" class="nav-button">Web Site</button></li>
+          <li><button type="button" class="nav-button">App</button></li>
+          <li><button type="button" class="nav-button">Design</button></li>
+          <li><button type="button" class="nav-button">Marketing</button></li>
+        </ul>
+
         <ul class="gallery-container list">
 
           <li class="li-port"><a href="" class="link link-port">
@@ -141,45 +141,45 @@
       </div>
     </section>
   </main>
-<!--footer-->
-<footer class="footer">
-  <div class="container footer-main">
-    <div class="f-cont">
-      <a href="./index.html" class="link footer-logo">Web<span class="logo-studio-footer">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </div>
-    <div class="div-sm-footer">
-      <h3 class="footer-smtext">Social media</h3>
-      <div class="div-sm-icons">
-        <ul class="list-persons-sm list">
-          <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
-                heigt="20">
-                <use href="./images/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-            </a> </li>
-          <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
-                heigt="20">
-                <use href="./images/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-            </a> </li>
-          <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
-                heigt="20">
-                <use href="./images/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-            </a> </li>
-          <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
-                heigt="20">
-                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-            </a> </li>
-        </ul>
+  <!--footer-->
+  <footer class="footer">
+    <div class="container footer-main">
+      <div class="f-cont">
+        <a href="./index.html" class="link footer-logo">Web<span class="logo-studio-footer">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
+      <div class="div-sm-footer">
+        <h3 class="footer-smtext">Social media</h3>
+        <div class="div-sm-icons">
+          <ul class="list-persons-sm list">
+            <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
+                  height="20">
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a> </li>
+            <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
+                  height="20">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a> </li>
+            <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
+                  height="20">
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a> </li>
+            <li class="persons-soc-item"> <a href="" class="persons-soc-link link"> <svg class="pers-svg" width="20"
+                  height="20">
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a> </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 </body>
 
 </html>
